maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:14: error: '(' expected but identifier found.
    if estFaceMur(){
       ^WallFollowerMaze:20: error: illegal start of simple expression
  }
  ^