maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall(){
  if (estFaceMur()){
    gauche()
  }
  else{
    gauche()
    if estFaceMur(){
      droite();avance()
    }
    else{
      avance()
    }
  }
}